An option for no-reranking (aka. naive rag for each generated query) added.

--- a/7. Advanced RAG Pipeline .ipynb
+++ b/7. Advanced RAG Pipeline .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46e58059",
+   "id": "ec736155",
    "metadata": {},
    "source": [
     "# The Pipeline\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8b2f74c",
+   "id": "71ef3ad6",
    "metadata": {},
    "source": [
     "## The Retrieval Augmentation Pipeline"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9049fa3c",
+   "id": "0851a90c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39b19cb5",
+   "id": "ddc45a57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f1782fb3",
+   "id": "f538b929",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c46e96d4",
+   "id": "4a8fd1f9",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4f5de965",
+   "id": "005e7ed7",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6be761c",
+   "id": "eb6c4e3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,15 +254,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a4a4319",
+   "id": "bda898b6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "19794716",
+   "execution_count": 196,
+   "id": "7e0f3172",
    "metadata": {},
    "outputs": [
     {
@@ -284,12 +284,12 @@
       "\n",
       "Enter a temperature value (0.0 to 1.0): 0\n",
       "\n",
-      "How many queries to produce? More complex questions benefit from more sub-questions: 6\n",
-      "Produced queries: ['What does Socrates think about death?', \"What are Socrates' beliefs regarding the nature of death?\", 'How does Socrates view the impact of death on the soul?', 'What arguments does Socrates present to support his views on death?', \"What role does fear play in Socrates' perspective on death?\", \"How does Socrates' philosophy on death influence his overall worldview?\"]\n",
+      "How many queries to produce? More complex questions benefit from more sub-questions: 3\n",
+      "Produced queries: ['What does Socrates think about death?', \"What were Socrates' beliefs regarding the afterlife?\", 'How did Socrates view the concept of mortality?']\n",
       "\n",
-      "How many documents to retrieve per generated query? 5\n",
+      "How many documents to retrieve per generated query? 4\n",
       "\n",
-      "Do you want to rerank the results using a reranker, or critique functions? (r/c) c\n"
+      "Do you want to rerank the results using a reranker, critique functions, or neither? (r/c/n) n\n"
      ]
     }
    ],
@@ -520,7 +520,7 @@
     "\n",
     "\n",
     "    def rerank(self, docs):\n",
-    "        choice = input('\\nDo you want to rerank the results using a reranker, or critique functions? (r/c) ').lower().strip()\n",
+    "        choice = input('\\nDo you want to rerank the results using a reranker, critique functions, or neither? (r/c/n) ').lower().strip()\n",
     "\n",
     "        if choice == 'r':\n",
     "            re_model = input('\\nWhich reranker model? [rerank-english-v2.0, rerank-english-v3.0] ').lower().strip()\n",
@@ -530,7 +530,7 @@
     "            # Processing documents based on provided input `docs` which should be the result from `query`\n",
     "            for query_number, (query, matched_docs) in docs.items():\n",
     "                docs_as_dict = list_to_dic(matched_docs)\n",
-    "                rerank_docs = self.co.rerank(query=query, documents=docs_as_dict, top_n=2, model=re_model)  # get top 2 reranked\n",
+    "                rerank_docs = self.co.rerank(query=query, documents=docs_as_dict, top_n=1, model=re_model)  # get top 2 reranked\n",
     "                re_ordering = rerank_docs.results\n",
     "                results = [matched_docs[hit.index] for hit in rerank_docs.results]  # Adjusted line\n",
     "\n",
@@ -558,9 +558,24 @@
     "\n",
     "                # Sort triples based on relevance and weighted_score, both in descending order\n",
     "                sorted_triples = sorted(triples, key=lambda x: (x[2][1]['relevance'], x[2][0]), reverse=True)\n",
+    "                sorted_triples = sorted_triples[0]\n",
     "\n",
     "                if sorted_triples:\n",
     "                    reranked_docs[query_number] = sorted_triples  # Store sorted triples per query if any\n",
+    "\n",
+    "            return reranked_docs\n",
+    "        \n",
+    "        else:\n",
+    "            reranked_docs = {}\n",
+    "            # Similar processing for critique method\n",
+    "            for query_number, (query, matched_docs) in docs.items():\n",
+    "                pairs = []\n",
+    "                for doc in matched_docs:\n",
+    "                    pairs.append((query, doc))  # Store all matching triples\n",
+    "\n",
+    "                # Sort triples based on relevance and weighted_score, both in descending order\n",
+    "                pairs = pairs[0]\n",
+    "                reranked_docs[query_number] = pairs  # Store sorted triples per query if any\n",
     "\n",
     "            return reranked_docs\n",
     "\n",
@@ -573,8 +588,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "610ae03f",
+   "execution_count": 198,
+   "id": "ca0d61c9",
    "metadata": {
     "scrolled": false
    },
@@ -582,25 +597,11 @@
     {
      "data": {
       "text/plain": [
-       "[('What does Socrates think about death?',\n",
-       "  Document(page_content=\"It is probably true that in mainstream fifth century Greek culture,\\nbelief in an afterlife of the soul was weak and unclear (Claus 1981,\\n68; Burnet 1916, 248-9). If so, it is fitting that Socrates' arguments\\nfor the immortality of the soul, most prominently in the\\nPhaedo, are offered to interlocutors who, at the outset of the\\ndiscussion, are by no means convinced of the idea. (In fact, in the\\nApology, 40c, Socrates himself is presented as being\\nnoncommittal about what happens to the soul at death, and even about\\nwhether it survives at all.) “Men find it very hard to\\nbelieve”, Cebes says at Phaedo 70a, “what you said\\nabout the soul. They think that after it has left the body it no\\nlonger exists anywhere, but that it is destroyed and dissolved on the\\nday the man dies.” This view is restated by Simmias (at 77b) as\\nthe opinion of the majority (cf. 80d); note that the view includes the\\nidea that the soul is a material thing, and is destroyed by being\\ndispersed, “like breath or smoke” (70a). Glaucon, in the\\nlast book of the Republic (608d), is taken aback by\\nSocrates' question,\\n\\n\\n“Haven't you realized that our soul is immortal and never\\ndestroyed?”\\n\\nHe looked at me with wonder and said: “No, by god, I\\nhaven't. Are you really in a position to assert that?”\", metadata={'article_id': '76', 'authors': ['Hendrik Lorenz --- hlorenz@princeton.edu'], 'chunk': 9.0, 'citation': 'https://plato.stanford.edu/cgi-bin/encyclopedia/archinfo.cgi?entry=ancient-soul', 'date': '2009', 'source': 'https://plato.stanford.edu/archives/spr2024/entries/ancient-soul/', 'title': 'Ancient Theories of Soul'}),\n",
-       "  [0.8875000000000001,\n",
-       "   {'relevance': 1.0,\n",
-       "    'clarity': 0.8,\n",
-       "    'coherence': 0.8,\n",
-       "    'details': 0.8,\n",
-       "    'suitability': 0.85}]),\n",
-       " ('What does Socrates think about death?',\n",
-       "  Document(page_content=\"What he does, in fact, conclude is that the soul is most like,\\nand most akin to, intelligible being, and that the body is most\\nlike perceptible and perishable being. To say this is plainly neither\\nto assert nor to imply (as Robinson 1995, 30, appears to think) that\\nsoul in some way or other falls short of intelligible, imperishable\\nbeing, any more than it is to assert or imply that body in some way or\\nother falls short of, or rather rises above, perceptible, perishable\\nbeing. The argument leaves it open whether soul is a perfectly\\nrespectable member of intelligible reality, the way human bodies are\\nperfectly respectable members of perceptible reality, or whether,\\nalternatively, soul has some intermediate status in between\\nintelligible and perceptible being, rising above the latter, but\\nmerely approximating to the former. Socrates does seem to take his\\nconclusion to imply, or at least strongly suggest, that it is natural\\nfor the soul either “to be altogether indissoluble, or nearly\\nso”, but, in any case, that the soul is less subject to\\ndissolution and destruction than the body, rather than, as the popular\\nview has it, more so. If this position can be established, Socrates is\\nin a position to refute the popular view that the soul, being composed\\nof ethereal stuff, is more liable to dispersion and destruction\\nthan the body.  However, as Cebes points out (88b), unless Socrates\\ncan establish that the soul is altogether exempt from destruction,\\nconfidence of survival in the face of death is misplaced. Socrates'\\nsoul may be a great deal more durable than his body, but as long as it\\nis not truly imperishable, there can be no guarantee that it will\\nsurvive Socrates' impending death. For it might have experienced any\\nnumber of incarnations already, and the current one might be its\\nlast. So Socrates launches his most elaborate and final argument for\\nthe immortality of the soul, which concludes that since life belongs\\nto soul essentially, the soul must be deathless — that is,\\nimmortal.\", metadata={'article_id': '76', 'authors': ['Hendrik Lorenz --- hlorenz@princeton.edu'], 'chunk': 11.0, 'citation': 'https://plato.stanford.edu/cgi-bin/encyclopedia/archinfo.cgi?entry=ancient-soul', 'date': '2009', 'source': 'https://plato.stanford.edu/archives/spr2024/entries/ancient-soul/', 'title': 'Ancient Theories of Soul'}),\n",
-       "  [0.875,\n",
-       "   {'relevance': 1.0,\n",
-       "    'clarity': 0.7,\n",
-       "    'coherence': 0.8,\n",
-       "    'details': 0.8,\n",
-       "    'suitability': 0.85}])]"
+       "('What does Socrates think about death?',\n",
+       " Document(page_content=\"It is probably true that in mainstream fifth century Greek culture,\\nbelief in an afterlife of the soul was weak and unclear (Claus 1981,\\n68; Burnet 1916, 248-9). If so, it is fitting that Socrates' arguments\\nfor the immortality of the soul, most prominently in the\\nPhaedo, are offered to interlocutors who, at the outset of the\\ndiscussion, are by no means convinced of the idea. (In fact, in the\\nApology, 40c, Socrates himself is presented as being\\nnoncommittal about what happens to the soul at death, and even about\\nwhether it survives at all.) “Men find it very hard to\\nbelieve”, Cebes says at Phaedo 70a, “what you said\\nabout the soul. They think that after it has left the body it no\\nlonger exists anywhere, but that it is destroyed and dissolved on the\\nday the man dies.” This view is restated by Simmias (at 77b) as\\nthe opinion of the majority (cf. 80d); note that the view includes the\\nidea that the soul is a material thing, and is destroyed by being\\ndispersed, “like breath or smoke” (70a). Glaucon, in the\\nlast book of the Republic (608d), is taken aback by\\nSocrates' question,\\n\\n\\n“Haven't you realized that our soul is immortal and never\\ndestroyed?”\\n\\nHe looked at me with wonder and said: “No, by god, I\\nhaven't. Are you really in a position to assert that?”\", metadata={'article_id': '76', 'authors': ['Hendrik Lorenz --- hlorenz@princeton.edu'], 'chunk': 9.0, 'citation': 'https://plato.stanford.edu/cgi-bin/encyclopedia/archinfo.cgi?entry=ancient-soul', 'date': '2009', 'source': 'https://plato.stanford.edu/archives/spr2024/entries/ancient-soul/', 'title': 'Ancient Theories of Soul'}))"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5d6ffc",
+   "id": "3c6094f4",
    "metadata": {},
    "source": [
     "## Generation"
@@ -620,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "01bb3b68",
+   "id": "a78e6edd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "b7e78bff",
+   "id": "b06e82cf",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "2587defa",
+   "id": "ffd82264",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "80c31f4f",
+   "id": "9b710e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "65a2d76b",
+   "id": "4edcadb4",
    "metadata": {
     "scrolled": true
    },
@@ -1003,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "14bff26d",
+   "id": "f6ef5fd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "7cbe062c",
+   "id": "66a19837",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "cdf38388",
+   "id": "d45e83e5",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "4fbe6be8",
+   "id": "907cfee1",
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08aa4a4b",
+   "id": "35a0806f",
    "metadata": {},
    "source": [
     "## To do\n",
@@ -1534,7 +1535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54649d86",
+   "id": "be4ef25c",
    "metadata": {},
    "source": [
     "# Advnaced RAG Pipeline\n",
@@ -1544,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8863136",
+   "id": "b6885b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faeeb9ec",
+   "id": "3449155b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1562,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d0d6c4",
+   "id": "9f2cdea1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1570,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba376885",
+   "id": "7d40887f",
    "metadata": {},
    "outputs": [],
    "source": []
