Some feature engineering from notebook 2 was moved here for consisstency of the SEP data used elsewhere

--- a/1. SEP -- Scraping the Data.ipynb
+++ b/1. SEP -- Scraping the Data.ipynb
@@ -15757,18 +15757,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
-   "id": "849ca7e9",
+   "execution_count": 2,
+   "id": "75107114",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet('SEP.parquet')"
+    "# reformattign cols for indexing in pinecone\n",
+    "df['ID'] = df.index + 1\n",
+    "df['Title'] = df['Title'].astype(str)\n",
+    "df['Text'] = df['Text'].astype(str)\n",
+    "df['Bib_Refined'] = df['Bib_Refined'].astype(str)\n",
+    "df['Other Resources'] = df['Other Resources'].astype(str)\n",
+    "df['Related'] = df['Related'].astype(str)\n",
+    "df['Authors'] = df['Authors'].apply(lambda my_list: {item['name']: item['email'] for item in my_list})\n",
+    "df['Authors'] = df['Authors'].apply(lambda my_list: [name + ' --- ' + (email if email is not None else 'No email provided') for name, email in my_list.items()])\n",
+    "df['FINAL_TEXT'] = \"Table of Content: \" + df['TOC'] + \"\\n\\n\" + \"Text: \" + df['Text'] + \"\\n\\n\" + \"Bibliography: \" + df['Bib_Refined'] + \"\\n\\n\" + \"Other Resources: \" + df['Other Resources'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
-   "id": "c45034fe",
+   "execution_count": 3,
+   "id": "e07f609a",
    "metadata": {},
    "outputs": [
     {
@@ -15806,6 +15815,8 @@
        "      <th>Authors</th>\n",
        "      <th>BibURL</th>\n",
        "      <th>Bib_Refined</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>FINAL_TEXT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -15822,9 +15833,11 @@
        "      <td>\\n\\nCopyright © 2021 by\\n\\n\\nCorey Dyck\\n&lt;cdyc...</td>\n",
        "      <td>InCollection{sep-18thGerman-preKant,\\n\\tauthor...</td>\n",
        "      <td>2021</td>\n",
-       "      <td>[{'email': 'cdyck5@uwo.ca', 'name': 'Corey Dyc...</td>\n",
+       "      <td>[Corey Dyck --- cdyck5@uwo.ca, Brigitte Sassen...</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Press, 1738, Tractatus de arte sobrie et\\nacc...</td>\n",
+       "      <td>['Press, 1738, Tractatus de arte sobrie et\\nac...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. Christian Thomasius...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -15839,9 +15852,11 @@
        "      <td>\\n\\nCopyright © 2021 by\\n\\n\\nIgor Douven\\n&lt;igo...</td>\n",
        "      <td>InCollection{sep-abduction,\\n\\tauthor       =\\...</td>\n",
        "      <td>2021</td>\n",
-       "      <td>[{'email': 'igor.douven@paris-sorbonne.fr', 'n...</td>\n",
+       "      <td>[Igor Douven --- igor.douven@paris-sorbonne.fr]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[\\nBibliography\\n\\nAchinstein, P., 2001. The B...</td>\n",
+       "      <td>['\\nBibliography\\n\\nAchinstein, P., 2001. The ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Table of Content: \\n\\n1. Abduction: The Genera...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -15856,9 +15871,11 @@
        "      <td>\\n\\nCopyright © 2022 by\\n\\n\\nPeter King\\n\\nAnd...</td>\n",
        "      <td>InCollection{sep-abelard,\\n\\tauthor       =\\t{...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>[{'email': None, 'name': 'Peter King'}, {'emai...</td>\n",
+       "      <td>[Peter King --- No email provided, Andrew Arli...</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Fairweather, E. R., 1995, A Scholastic Miscel...</td>\n",
+       "      <td>['Fairweather, E. R., 1995, A Scholastic Misce...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. Life and Works\\n\\n1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -15873,9 +15890,11 @@
        "      <td>\\n\\nCopyright © 2022 by\\n\\n\\nNoa Ronkin\\n&lt;noa....</td>\n",
        "      <td>InCollection{sep-abhidharma,\\n\\tauthor       =...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>[{'email': 'noa.ronkin@wolfson.oxon.org', 'nam...</td>\n",
+       "      <td>[Noa Ronkin --- noa.ronkin@wolfson.oxon.org]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Bronkhorst, J., 2016, “Abhidharma and Indian\\...</td>\n",
+       "      <td>['Bronkhorst, J., 2016, “Abhidharma and Indian...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Table of Content: \\n\\n1. Abhidharma: its origi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -15890,12 +15909,16 @@
        "      <td>\\n\\nCopyright © 2020 by\\n\\n\\nJohn Maier\\n&lt;john...</td>\n",
        "      <td>InCollection{sep-abilities,\\n\\tauthor       =\\...</td>\n",
        "      <td>2020</td>\n",
-       "      <td>[{'email': 'john@jmaier.net', 'name': 'John Ma...</td>\n",
+       "      <td>[John Maier --- john@jmaier.net]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Oxford University Press, 1986, 67–80.\\nOxford...</td>\n",
+       "      <td>['Oxford University Press, 1986, 67–80.\\nOxfor...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. A taxonomy\\n\\n1.1 D...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -15924,9 +15947,11 @@
        "      <td>\\n\\nCopyright © 2021 by\\n\\n\\nJohn Palmer\\n&lt;jpa...</td>\n",
        "      <td>InCollection{sep-zeno-elea,\\n\\tauthor       =\\...</td>\n",
        "      <td>2021</td>\n",
-       "      <td>[{'email': 'jpalmer@phil.ufl.edu', 'name': 'Jo...</td>\n",
+       "      <td>[John Palmer --- jpalmer@phil.ufl.edu]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Bellarmin/Paris: Les Belles Lettres, 1989, pp...</td>\n",
+       "      <td>['Bellarmin/Paris: Les Belles Lettres, 1989, p...</td>\n",
+       "      <td>1799</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. Life and Writings\\n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1799</th>\n",
@@ -15941,9 +15966,11 @@
        "      <td>\\n\\nCopyright © 2013 by\\n\\n\\nMichael Hallett\\n...</td>\n",
        "      <td>InCollection{sep-zermelo-set-theory,\\n\\tauthor...</td>\n",
        "      <td>2013</td>\n",
-       "      <td>[{'email': 'michael.hallett@mcgill.ca', 'name'...</td>\n",
+       "      <td>[Michael Hallett --- michael.hallett@mcgill.ca]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Bell, J., 2009, The Axiom of Choice, London: ...</td>\n",
+       "      <td>['Bell, J., 2009, The Axiom of Choice, London:...</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. The Axioms\\n2.  The...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1800</th>\n",
@@ -15958,9 +15985,11 @@
        "      <td>\\n\\nCopyright © 2020 by\\n\\n\\nKirill Thompson\\n...</td>\n",
        "      <td>InCollection{sep-zhu-xi,\\n\\tauthor       =\\t{T...</td>\n",
        "      <td>2020</td>\n",
-       "      <td>[{'email': 'ktviking@gmail.com', 'name': 'Kiri...</td>\n",
+       "      <td>[Kirill Thompson --- ktviking@gmail.com]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[–––, 1981, ErCheng ji [Collected\\nWorks of th...</td>\n",
+       "      <td>['–––, 1981, ErCheng ji [Collected\\nWorks of t...</td>\n",
+       "      <td>1801</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. Life and Works\\n2. ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1801</th>\n",
@@ -15975,9 +16004,11 @@
        "      <td>\\n\\nCopyright © 2014 by\\n\\n\\nChad Hansen\\n&lt;cha...</td>\n",
        "      <td>InCollection{sep-zhuangzi,\\n\\tauthor       =\\t...</td>\n",
        "      <td>2014</td>\n",
-       "      <td>[{'email': 'chadzi@gmail.com', 'name': 'Chad H...</td>\n",
+       "      <td>[Chad Hansen --- chadzi@gmail.com]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[and Walsh, 1961, Chuang Tzu: Taoist Philosoph...</td>\n",
+       "      <td>['and Walsh, 1961, Chuang Tzu: Taoist Philosop...</td>\n",
+       "      <td>1802</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. Zhuangzi’s Life and...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1802</th>\n",
@@ -15992,13 +16023,15 @@
        "      <td>\\n\\nCopyright © 2023 by\\n\\n\\nRobert Kirk\\n&lt;Rob...</td>\n",
        "      <td>InCollection{sep-zombies,\\n\\tauthor       =\\t{...</td>\n",
        "      <td>2023</td>\n",
-       "      <td>[{'email': 'Robert.Kirk@nottingham.ac.uk', 'na...</td>\n",
+       "      <td>[Robert Kirk --- Robert.Kirk@nottingham.ac.uk]</td>\n",
        "      <td>https://plato.stanford.edu/cgi-bin/encyclopedi...</td>\n",
-       "      <td>[Alter, T., 2007, ‘On the Conditional Analysis...</td>\n",
+       "      <td>['Alter, T., 2007, ‘On the Conditional Analysi...</td>\n",
+       "      <td>1803</td>\n",
+       "      <td>Table of Content: \\n\\n\\n1. The idea of zombies...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1803 rows × 14 columns</p>\n",
+       "<p>1803 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -16133,17 +16166,17 @@
        "1802  InCollection{sep-zombies,\\n\\tauthor       =\\t{...  2023   \n",
        "\n",
        "                                                Authors  \\\n",
-       "0     [{'email': 'cdyck5@uwo.ca', 'name': 'Corey Dyc...   \n",
-       "1     [{'email': 'igor.douven@paris-sorbonne.fr', 'n...   \n",
-       "2     [{'email': None, 'name': 'Peter King'}, {'emai...   \n",
-       "3     [{'email': 'noa.ronkin@wolfson.oxon.org', 'nam...   \n",
-       "4     [{'email': 'john@jmaier.net', 'name': 'John Ma...   \n",
+       "0     [Corey Dyck --- cdyck5@uwo.ca, Brigitte Sassen...   \n",
+       "1       [Igor Douven --- igor.douven@paris-sorbonne.fr]   \n",
+       "2     [Peter King --- No email provided, Andrew Arli...   \n",
+       "3          [Noa Ronkin --- noa.ronkin@wolfson.oxon.org]   \n",
+       "4                      [John Maier --- john@jmaier.net]   \n",
        "...                                                 ...   \n",
-       "1798  [{'email': 'jpalmer@phil.ufl.edu', 'name': 'Jo...   \n",
-       "1799  [{'email': 'michael.hallett@mcgill.ca', 'name'...   \n",
-       "1800  [{'email': 'ktviking@gmail.com', 'name': 'Kiri...   \n",
-       "1801  [{'email': 'chadzi@gmail.com', 'name': 'Chad H...   \n",
-       "1802  [{'email': 'Robert.Kirk@nottingham.ac.uk', 'na...   \n",
+       "1798             [John Palmer --- jpalmer@phil.ufl.edu]   \n",
+       "1799    [Michael Hallett --- michael.hallett@mcgill.ca]   \n",
+       "1800           [Kirill Thompson --- ktviking@gmail.com]   \n",
+       "1801                 [Chad Hansen --- chadzi@gmail.com]   \n",
+       "1802     [Robert Kirk --- Robert.Kirk@nottingham.ac.uk]   \n",
        "\n",
        "                                                 BibURL  \\\n",
        "0     https://plato.stanford.edu/cgi-bin/encyclopedi...   \n",
@@ -16158,31 +16191,73 @@
        "1801  https://plato.stanford.edu/cgi-bin/encyclopedi...   \n",
        "1802  https://plato.stanford.edu/cgi-bin/encyclopedi...   \n",
        "\n",
-       "                                            Bib_Refined  \n",
-       "0     [Press, 1738, Tractatus de arte sobrie et\\nacc...  \n",
-       "1     [\\nBibliography\\n\\nAchinstein, P., 2001. The B...  \n",
-       "2     [Fairweather, E. R., 1995, A Scholastic Miscel...  \n",
-       "3     [Bronkhorst, J., 2016, “Abhidharma and Indian\\...  \n",
-       "4     [Oxford University Press, 1986, 67–80.\\nOxford...  \n",
-       "...                                                 ...  \n",
-       "1798  [Bellarmin/Paris: Les Belles Lettres, 1989, pp...  \n",
-       "1799  [Bell, J., 2009, The Axiom of Choice, London: ...  \n",
-       "1800  [–––, 1981, ErCheng ji [Collected\\nWorks of th...  \n",
-       "1801  [and Walsh, 1961, Chuang Tzu: Taoist Philosoph...  \n",
-       "1802  [Alter, T., 2007, ‘On the Conditional Analysis...  \n",
+       "                                            Bib_Refined    ID  \\\n",
+       "0     ['Press, 1738, Tractatus de arte sobrie et\\nac...     1   \n",
+       "1     ['\\nBibliography\\n\\nAchinstein, P., 2001. The ...     2   \n",
+       "2     ['Fairweather, E. R., 1995, A Scholastic Misce...     3   \n",
+       "3     ['Bronkhorst, J., 2016, “Abhidharma and Indian...     4   \n",
+       "4     ['Oxford University Press, 1986, 67–80.\\nOxfor...     5   \n",
+       "...                                                 ...   ...   \n",
+       "1798  ['Bellarmin/Paris: Les Belles Lettres, 1989, p...  1799   \n",
+       "1799  ['Bell, J., 2009, The Axiom of Choice, London:...  1800   \n",
+       "1800  ['–––, 1981, ErCheng ji [Collected\\nWorks of t...  1801   \n",
+       "1801  ['and Walsh, 1961, Chuang Tzu: Taoist Philosop...  1802   \n",
+       "1802  ['Alter, T., 2007, ‘On the Conditional Analysi...  1803   \n",
        "\n",
-       "[1803 rows x 14 columns]"
+       "                                             FINAL_TEXT  \n",
+       "0     Table of Content: \\n\\n\\n1. Christian Thomasius...  \n",
+       "1     Table of Content: \\n\\n1. Abduction: The Genera...  \n",
+       "2     Table of Content: \\n\\n\\n1. Life and Works\\n\\n1...  \n",
+       "3     Table of Content: \\n\\n1. Abhidharma: its origi...  \n",
+       "4     Table of Content: \\n\\n\\n1. A taxonomy\\n\\n1.1 D...  \n",
+       "...                                                 ...  \n",
+       "1798  Table of Content: \\n\\n\\n1. Life and Writings\\n...  \n",
+       "1799  Table of Content: \\n\\n\\n1. The Axioms\\n2.  The...  \n",
+       "1800  Table of Content: \\n\\n\\n1. Life and Works\\n2. ...  \n",
+       "1801  Table of Content: \\n\\n\\n1. Zhuangzi’s Life and...  \n",
+       "1802  Table of Content: \\n\\n\\n1. The idea of zombies...  \n",
+       "\n",
+       "[1803 rows x 16 columns]"
       ]
      },
-     "execution_count": 559,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ccbf3f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_parquet('SEP.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2ab8b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "df = pd.read_parquet('SEP.parquet')\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b98575",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
