--- a/8. Testing Pipelines and Parameters.ipynb
+++ b/8. Testing Pipelines and Parameters.ipynb
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2f74d081",
+   "id": "fee17111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a8effa1f",
+   "id": "463578da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "c694c8af",
+   "id": "23d7dd0b",
    "metadata": {
     "scrolled": true
    },
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "aa3b2bda",
+   "id": "e92a34f9",
    "metadata": {
     "scrolled": true
    },
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "a50d4d30",
+   "id": "8ab11c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "db92ff74",
+   "id": "5f70a82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "82ab735d",
+   "id": "cd7cccaa",
    "metadata": {
     "scrolled": true
    },
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa5dfd7",
+   "id": "efde8f5b",
    "metadata": {},
    "source": [
     "### Adding the index info to the test dataframe"
@@ -1206,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb476082",
+   "id": "8d238e56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,8 +1217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "df2db59f",
+   "execution_count": 212,
+   "id": "f106a651",
    "metadata": {
     "scrolled": false
    },
@@ -1335,7 +1335,7 @@
        "      <td>100</td>\n",
        "      <td>RecursiveCharacterTextSplitter</td>\n",
        "      <td>400</td>\n",
-       "      <td>text-embedding-3-small</td>\n",
+       "      <td>text-embedding-3-large</td>\n",
        "      <td>Query</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1352,7 +1352,7 @@
        "      <td>100</td>\n",
        "      <td>RecursiveCharacterTextSplitter</td>\n",
        "      <td>800</td>\n",
-       "      <td>text-embedding-3-small</td>\n",
+       "      <td>text-embedding-3-large</td>\n",
        "      <td>Query</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1369,7 +1369,7 @@
        "      <td>100</td>\n",
        "      <td>RecursiveCharacterTextSplitter</td>\n",
        "      <td>1000</td>\n",
-       "      <td>text-embedding-3-small</td>\n",
+       "      <td>text-embedding-3-large</td>\n",
        "      <td>Query</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1386,7 +1386,7 @@
        "      <td>100</td>\n",
        "      <td>RecursiveCharacterTextSplitter</td>\n",
        "      <td>1500</td>\n",
-       "      <td>text-embedding-3-small</td>\n",
+       "      <td>text-embedding-3-large</td>\n",
        "      <td>Query</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -1417,10 +1417,10 @@
        "1  RecursiveCharacterTextSplitter        400  text-embedding-3-small  Query   \n",
        "2  RecursiveCharacterTextSplitter        800  text-embedding-3-small  Query   \n",
        "3  RecursiveCharacterTextSplitter       1000  text-embedding-3-small  Query   \n",
-       "4  RecursiveCharacterTextSplitter        400  text-embedding-3-small  Query   \n",
-       "5  RecursiveCharacterTextSplitter        800  text-embedding-3-small  Query   \n",
-       "6  RecursiveCharacterTextSplitter       1000  text-embedding-3-small  Query   \n",
-       "7  RecursiveCharacterTextSplitter       1500  text-embedding-3-small  Query   \n",
+       "4  RecursiveCharacterTextSplitter        400  text-embedding-3-large  Query   \n",
+       "5  RecursiveCharacterTextSplitter        800  text-embedding-3-large  Query   \n",
+       "6  RecursiveCharacterTextSplitter       1000  text-embedding-3-large  Query   \n",
+       "7  RecursiveCharacterTextSplitter       1500  text-embedding-3-large  Query   \n",
        "\n",
        "  QueryType NumQueriesGenerated NumDocsPerQuery RerankCritique OrigQuery  \\\n",
        "0       NaN                 NaN             NaN            NaN       NaN   \n",
@@ -1453,7 +1453,7 @@
        "7  [[{'doc1': 'content1'}, {'doc2': 'content2'}],...        3072  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "6f680822",
+   "id": "46a3738f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
     "    'NumArticles': 100,\n",
     "    'Splitter': 'RecursiveCharacterTextSplitter',\n",
     "    'ChunkSize': 1500,  #------------------------ CHANGE\n",
-    "    'EmbeddingModel': 'text-embedding-3-small',\n",
+    "    'EmbeddingModel': 'text-embedding-3-large',  #------------------------ CHANGE\n",
     "    'Query': 'Query',\n",
     "    'QueryType': None,\n",
     "    'NumQueriesGenerated': None,\n",
@@ -1489,18 +1489,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "aa07eab8",
+   "execution_count": 213,
+   "id": "a25f27db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test['Dimensions'] = 1536"
+    "#test['EmbeddingModel'][7]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "5dadec8b",
+   "id": "f4871258",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,8 +1509,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "1057f115",
+   "execution_count": 214,
+   "id": "b4211321",
    "metadata": {},
    "outputs": [],
    "source": [
